# cassava

./: .gitignore  .travis.yml  CHANGES.md  GenericsTests.hs  README.md  Setup.hs  cabal.haskell-ci  cabal.project  cassava.cabal  ceason.cabal  default.nix  sea.cabal  shell.nix  stack.yaml
.github/workflows/: haskell-ci.yml  stack.yml
Data/: Ceason.hs  Csv.hs  Sea.hs
Data/Ceason/: Conversion.hs  Encode.hs  Encoding.hs  Parser.hs  Types.hs
Data/Ceason/Conversion/: Internal.hs
Data/Ceason/Encode/: Internal.hs
Data/Ceason/Parser/: Internal.hs
Data/Ceason/Types/: Class.hs  Internal.hs
Data/Csv/: Builder.hs  Conversion.hs  Encoding.hs  Incremental.hs  Parser.hs  Streaming.hs  Types.hs  Util.hs
Data/Csv/Compat/: Monoid.hs
Data/Csv/Conversion/: Generics.hs  Internal.hs
Data/Monoid/: CompatBase44.hs
benchmarks/: Benchmarks.hs  Compare.hs  Generate.hs  GenericFieldBench.hs  Laziness.hs  README.md  SuperLinear.hs  bench.py  cabal.project  cassava-iut.cabal  one-line.csv  presidents.csv  presidents_with_header.csv  shell.nix
benchmarks/Generic/: Either.hs  Prefix.hs  U16.hs  U2.hs  U32.hs  U4.hs  U8.hs
examples/: IncrementalIndexedBasedDecode.hs  IncrementalNameBasedDecode.hs  IncrementalNamedBasedEncode.hs  IndexBasedDecode.hs  IndexBasedGeneric.hs  NamedBasedDecode.hs  NamedBasedExplicitDecode.hs  NamedBasedGeneric.hs  README.md  StreamingIndexBasedDecode.hs  cassava-examples.cabal  salaries.csv
src/Data/: Csv.hs
src/Data/Csv/: Builder.hs  Conversion.hs  Encoding.hs  Incremental.hs  Parser.hs  Streaming.hs  Types.hs  Util.hs
src/Data/Csv/Conversion/: Internal.hs
tests/: UnitTests.hs
