Name:                ceason
Version:             0.1.0.0
Synopsis:            A CSV parsing and encoding library
Description:
  A CSV parsing and encoding library optimized for ease of use and high
  performance.
Homepage:            https://github.com/tibbe/sea
License:             BSD3
License-file:        LICENSE
Copyright:           (c) 2012 Johan Tibell
                     (c) 2011 MailRank, Inc.
Author:              Johan Tibell
Maintainer:          johan.tibell@gmail.com
Category:            Text, Web, CSV
Build-type:          Simple
Cabal-version:       >=1.8


Library
  Exposed-modules:     Data.Ceason
                       Data.Ceason.Types

  Other-modules:       Data.Ceason.Encode
                       Data.Ceason.Parser.Internal
                       Data.Ceason.Types.Internal

  Build-depends:       attoparsec,
                       base,
                       blaze-builder,
                       bytestring,
                       text,
                       vector

  ghc-options:         -Wall -O2

Test-suite unit-tests
  Type: exitcode-stdio-1.0
  Main-is: UnitTests.hs
  Build-depends:       base,
                       bytestring,
                       ceason,
                       HUnit,
                       test-framework,
                       test-framework-hunit
  hs-source-dirs: tests
