Name:                cassava-iut
Version:             0
Synopsis:            benchmarks for cassava
Homepage:            https://github.com/hvr/cassava
License:             BSD3
Maintainer:          hvr@gnu.org
Build-type:          Simple
Cabal-version:       >=1.10
Extra-source-files:  *.csv

-- cloned from cassava.cabal
----------------------------------------------------------------------------

flag pre-bytestring-0-10-4
  description: bytestring < 0.10.4
  default: False
  manual:  False

Library
  default-language: Haskell2010
  other-extensions:
    BangPatterns
    CPP
    DataKinds
    DefaultSignatures
    DeriveFunctor
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    Rank2Types
    ScopedTypeVariables
    TypeOperators
    UndecidableInstances

  if impl(ghc >= 8.0)
    other-extensions:
      DataKinds
      PolyKinds

  Exposed-modules:
    Data.Csv
    Data.Csv.Builder
    Data.Csv.Incremental
    Data.Csv.Parser
    Data.Csv.Streaming

  Other-modules:
    Data.Csv.Conversion
    Data.Csv.Conversion.Internal
    Data.Csv.Encoding
    Data.Csv.Types
    Data.Csv.Util

  Build-depends:
    array >= 0.4 && < 0.6,
    attoparsec >= 0.10.2 && < 0.15,
    base >= 4.5 && < 5,
    bytestring >= 0.9.2 && < 0.12,
    containers >= 0.4.2 && < 0.7,
    deepseq >= 1.1 && < 1.5,
    hashable < 1.5,
    scientific,
    text < 2.1,
    unordered-containers < 0.3,
    vector >= 0.8 && < 0.14,
    Only >= 0.1 && < 0.1.1

  if flag(pre-bytestring-0-10-4)
    build-depends: bytestring <  0.10.4
                 , bytestring-builder >= 0.10.8 && < 0.11
  else
    build-depends: bytestring >= 0.10.4
                 , text-short == 0.1.*

  -- GHC.Generics lived in `ghc-prim` for GHC 7.2 & GHC 7.4 only
  if impl(ghc < 7.6)
    build-depends: ghc-prim == 0.2.*

  -- https://ghc.haskell.org/trac/ghc/wiki/Migration/8.0#Recommendationsforforward-compatibility
  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
  else
    -- provide/emulate `Control.Monad.Fail` and `Data.Semigroups` API for pre-GHC8
    build-depends: fail == 4.9.*, semigroups == 0.18.*

  if impl(ghc >= 8.2)
    ghc-options: -Wcpp-undef

  ghc-options: -Wall -O2

  hs-source-dirs: ../src

----------------------------------------------------------------------------

Benchmark benchmark-iut
  default-language: Haskell2010

  Type: exitcode-stdio-1.0
  Main-is: Benchmarks.hs
  other-modules: GenericFieldBench
                 Generic.Either
                 Generic.Prefix
                 Generic.U2
                 Generic.U4
                 Generic.U8
                 Generic.U16
                 Generic.U32

  -- dependencies with version constraints inherited via lib:cassava-iut
  build-depends: base
               , bytestring
               , cassava-iut
               , deepseq
               , unordered-containers
               , text
               , vector

  build-depends: criterion >= 1.2 && < 1.6
               , lazy-csv == 0.5.*

  ghc-options: -Wall -O2

  cpp-options: -DGENERIC_FIELD_BENCH

Benchmark benchmark-ref
  default-language: Haskell2010

  Type: exitcode-stdio-1.0
  Main-is: Benchmarks.hs

  -- dependencies with version constraints inherited via lib:cassava-iut
  build-depends: base
               , bytestring
               , deepseq
               , unordered-containers
               , text
               , vector

  build-depends: criterion >= 1.2 && < 1.6
               , lazy-csv == 0.5.*
               , cassava >= 0.4 && < 0.6

  ghc-options: -Wall -O2
